# integrated-run

./: .gitignore  MANIFEST.in  README.md  integrated-run.lsf  integrated-run.sh  pyproject.toml  requirements.txt
figures/: figures.ipynb
figures/data/: benchmarking.csv  filetimes.txt
gromacs/: run_gmx.sh
gromacs/sim_1/: confout_10210.gro  state.cpt  topol.tpr
gromacs/sim_2/: confout_10510.gro  topol.tpr
gromacs/sim_3/: confout_10810.gro  topol.tpr
gromacs/sim_4/: confout_10.gro  topol.tpr
henm/: align.py  average.py  estimate.py  henm-config.yaml  pipeline.py  run-henm.sh  write.py
henm/exe-files/: hetero-enm
henm/fluc_scripts/: fluc_match_8f.py  fluc_match_str_pdb.py
henm/input-files/: .protein_bb_unaligned_pbc_fixed.trr_offsets.npz  protein_bb_unaligned_pbc_fixed.trr  protein_initial_unaligned.gro
henm/output/: average.py
henm/run-align/: align-mda.py
henm/run-fluc/: commands.sh  enm.itp  enm_lammps.itp  fluc-match-8f.py
integrated-run/gromacs/: bootstrap_flux.sh
integrated_run/: integrated_run.sh
integrated_run.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
integrated_run/henm/: henm-config.yaml  run-henm.sh
integrated_run/lammps/: run-lammps.sh
lammps/: run-lammps.sh
lammps/lammps-input/: get_bond_coeff.py  get_data.py
lammps/ucg/: lammps.in  lammps_restart.in
scripts/: filetimes.py  filetimes.txt  findtraj.py  integrated-run.sh  integrated-run_job.err  log_filetimes.txt  refine.sh  refine_template.sh  submit_all.sh  timings.csv  timings_pipeline.csv  timings_stride.csv  trajtime.py  writepartial.py
(+22 files in other folders)
