[project]
name = "henm"
version = "0.1.0"
description = "UCG parameter estimation from CG MARTINI simulations"
authors = [{ name = "Rohan Subramanian" }]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["henm"]
include-package-data = true
